# Strava-AI-Powered-Recommendations

./: .gitignore  .streamlitignore  ANALYSIS_INDEX.md  CLAUDE.md  CODE_SNIPPETS_REFERENCE.md  DATA_SCHEMA_ANALYSIS.md  DEPLOYMENT.md  Dockerfile  FEATURES_GUIDE.md  GET_REAL_ROUTES.md  Makefile  Makefile.windows  PRESENTATION.md  PRESENTATION_10_SLIDES.md  PRESENTATION_NOTES.md  PRESENTATION_SLIDES.md  QUICK_START_REAL_ROUTES.md  README.md  STRAVA_AUTH_GUIDE.md  STREAMLIT_DATA_GUIDE.md  Strava_AI_Recommendation.ipynb  Strava_recommender.ipynb  Strave_recommender_final.ipynb  Strave_recommender_ver4.ipynb  TECHNICAL_ARCHITECTURE.md  add_gps_polylines.py  app_py.ipynb  auth_server.py  docker-compose.yml  env  fetch_real_strava_routes.py  final_project_assignment_tracker.csv  final_project_notion_tasks.csv  final_project_notion_tasks_professional.csv  generate_csv_exports.py  generate_precise_routes.py  generate_realistic_routes.py  generate_realistic_routes_fast.py  import_gpx_files.py  migrate_add_auth_and_cascade.sql  (+19 more)
app/: auth.py  cache.py  config.py  db.py  main.py  middleware.py  models.py  pyproject.toml  schemas.py
app/resources/: Strave_recommender_final.ipynb
app/routers/: __init__.py  activities.py  analytics.py  demo.py  export.py  health.py  location.py  notifications.py  recommend.py  social.py  users.py
app/services/: feature_store.py  location_cache.py  mmr_reranker.py  precision_distance.py  recommender.py  route_recommender.py  scheduler.py  train_model.py
frontend/: Dockerfile  README.md  index.html  package.json  tailwind.config.js  vite.config.js
(+28 files in other folders)
